--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -8,3 +8,5 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.24"
 serde_json = "1.0.64"
 log = "0.4.14"
+
+crypto = { path = "../crypto" }
