--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -5,10 +5,20 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.5.0", features = ["full"] }
+tokio-util = { version = "0.6.2", features= ["codec"] }
 clap = "2.33.3"
 env_logger = "0.7.1"
 log = "0.4.11"
+bytes = "1.0.1"
+bincode = "1.3.1"
 anyhow = "1.0.40"
+rand = "0.7.3"
+futures = "0.3.15"
+
+config = { path = "../config" }
+crypto = { path = "../crypto" }
+agent = { path = "../agent" }
+master = { path = "../master" }
 
 [[bin]]         
 name = "benchmark_client"   
